tests/bad/enum_call_value.ae
/// fail: Cannot call a non-function type

enum Variable {
    Integer
    IntLiteral
    Float
    String
}

def main() {
    let x = Variable::Integer()
}